[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma-pilot"
version = "0.1.0"
description = "A systematic-review screening assistant: dedup, transparent keyword screening, and PRISMA 2020 flow counts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ayan Ahmed" }]
keywords = ["systematic-review", "PRISMA", "meta-analysis", "screening", "deduplication", "research"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
prisma-pilot = "prismapilot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
